k8s/k8s/goatcounter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goatcounter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goatcounter
  template:
    metadata:
      labels:
        app: goatcounter
    spec:
      terminationGracePeriodSeconds: 60
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: goatcounter
      enableServiceLinks: false
      containers:
        - name: goatcounter
          image: ${IMAGE}
          args:
            - serve
            - -listen
            - :3000
            - -tls
            - none
            - -db
            - sqlite3+/data/goatcounter.sqlite3
            - -automigrate
            - -email-from
            - ${EMAIL}
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: goatcounter-data
              mountPath: /data
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL 
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m 
              memory: 128Mi
      volumes:
        - name: goatcounter-data
          persistentVolumeClaim:
            claimName: goatcounter-data
