k8s/k8s/goatcounter/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: goatcounter
spec:
  selector:
    app: goatcounter
  ports:
    - port: 80
      targetPort: 3000
