k8s/k8s/goatcounter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goatcounter
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: analytics.ekel.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goatcounter
                port:
                  number: 80
  tls:
    - hosts:
        - analytics.ekel.dev
      secretName: goatcounter-tls
