k8s/k8s/goatcounter/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: goatcounter-allow-traefik
spec:
  podSelector:
    matchLabels:
      app: goatcounter 
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik 
      ports:
        - protocol: tcp
          port: 3000
